deployment/k8s/backend-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend
  name: backend-blue
spec:
  selector:
    matchLabels:
      service: backend
  replicas: 3
  template:
    metadata:
      labels:
        service: backend
        color: blue
    spec:
      containers:
      - image: mzucc/tracker-backend:build-32
        name: backend
        imagePullPolicy: Always  
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"                  
      restartPolicy: Always
