deployment/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      service: frontend
  replicas: 2
  template:
    metadata:
      labels:
        service: frontend
        api: external        
    spec:
      containers:
      - image: mzucc/tracker-frontend-prod:build-32
        name: frontend
        imagePullPolicy: Always          
        ports:
        - containerPort: 5173
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m" 
      restartPolicy: Always
