deployment/k8s/backend-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend
  name: backend-blue
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    service: backend
    color: blue
  type: NodePort
