deployment/k8s/backend-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend
  name: backend-green
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    service: backend-green
  type: NodePort
