deployment/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend
  name: backend
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    service: backend
  type: NodePort
