deployment/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  ports:
  - name: "5173"
    port: 5173
    targetPort: 5173
  selector:
    service: frontend
  type: NodePort
