deployment/k8s/frontend-ingress-alb-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-alb-blue-green
  labels:
    color: blue
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 5173}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.blue-green: |
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"frontend-blue",
              "servicePort":"5173",
              "weight":100
            },
            {
              "serviceName":"frontend-green",
              "servicePort":"5173",
              "weight":0
            }
          ]
        }
      }
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blue-green
              port:
                name: use-annotation
